--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet/css" type="text/css" href="style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
+    <link rel="stylesheet/less" type="text/css" href="css/style.less" />
     <link rel="icon" type="image/png" href="imgs/netflix_icon.png" />
 
     <title>Netflix 2.0</title>
@@ -16,7 +14,7 @@
 
     <title>Document</title>
 </head>
-<body>
+<body class="black">
     
     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <div class="container-fluid">
@@ -57,8 +55,8 @@
               <div class="carousel-item active">
                 <img src="imgs/banner_money_heist.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5>Money Heist</h5>
+                  <p>A VERY COOL SHOW ABOUT PEOPLE BRAKING IN TO A BANK</p>
                 </div>
               </div>
               <div class="carousel-item">
@@ -104,8 +102,9 @@
           </ul>
     </div>
 
-    <div class="cards">
-        <div class="card1">
+    <div class="cards container text-center">
+      <div class="row row-cols-3">
+        <div class="Cardio">
             <div class="card border-dark" style="width: 18rem;">
                 <img src="imgs/movies/blade_runner_2049.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -115,7 +114,7 @@
                 </div>
               </div>
         </div>
-        <div class="card2">
+        <div class="Cardio">
             <div class="card border-dark" style="width: 18rem;">
                 <img src="imgs/movies/dark_knight.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -125,7 +124,7 @@
                 </div>
               </div>
         </div>
-        <div class="card3">
+        <div class="Cardio">
             <div class="card border-dark" style="width: 18rem;">
                 <img src="imgs/movies/jaws.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -135,7 +134,7 @@
                 </div>
               </div>
         </div>
-        <div class="card4">
+        <div class="Cardio">
             <div class="card border-dark" style="width: 18rem;">
                 <img src="imgs/movies/limitless.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -145,7 +144,7 @@
                 </div>
               </div>
         </div>
-        <div class="card5">
+        <div class="Cardio">
             <div class="card border-dark" style="width: 18rem;">
                 <img src="imgs/movies/wonder_woman.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -155,7 +154,7 @@
                 </div>
               </div>
         </div>
-        <div class="card6">
+        <div class="Cardio">
             <div class="card border-dark" style="width: 18rem;">
                 <img src="imgs/movies/the_irishman.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -165,9 +164,10 @@
                 </div>
               </div>
         </div>
-
+      </div>
     </div>
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/less" ></script>
 <script src="js/bootstrap.bundle.min.js"></script> 
 </html>
