--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
     <div class="Catagories">
         <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Active</a>
+              <button type="button" class="btn btn-info">cat 1</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <button type="button" class="btn btn-info">cat 2</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <button type="button" class="btn btn-info">cat 3</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              <button type="button" class="btn btn-info">cat 4</button>
             </li>
           </ul>
     </div>
@@ -105,7 +105,7 @@
     <div class="cards container text-center ">
       <div class="row row-cols-3">
         <div class="Cardio">
-            <div class="card border-dark" style="width: 18rem;">
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;">
                 <img src="imgs/movies/blade_runner_2049.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -115,7 +115,7 @@
               </div>
         </div>
         <div class="Cardio">
-            <div class="card border-dark" style="width: 18rem;">
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;">
                 <img src="imgs/movies/dark_knight.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -125,7 +125,7 @@
               </div>
         </div>
         <div class="Cardio">
-            <div class="card border-dark" style="width: 18rem;">
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;">
                 <img src="imgs/movies/jaws.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -135,7 +135,7 @@
               </div>
         </div>
         <div class="Cardio">
-            <div class="card border-dark" style="width: 18rem;">
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;">
                 <img src="imgs/movies/limitless.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -145,7 +145,7 @@
               </div>
         </div>
         <div class="Cardio">
-            <div class="card border-dark" style="width: 18rem;">
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;">
                 <img src="imgs/movies/wonder_woman.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -155,7 +155,7 @@
               </div>
         </div>
         <div class="Cardio">
-            <div class="card border-dark" style="width: 18rem;">
+            <div class="card text-white bg-dark mb-3" style="width: 18rem;">
                 <img src="imgs/movies/the_irishman.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
