--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn btn-primary" type="submit">Search</button>
             </form>
           </div>
         </div>
@@ -85,22 +85,6 @@
           </div>
     </header>
 
-    <div class="Catagories">
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-              <button type="button" class="btn btn-info">cat 1</button>
-            </li>
-            <li class="nav-item">
-              <button type="button" class="btn btn-info">cat 2</button>
-            </li>
-            <li class="nav-item">
-              <button type="button" class="btn btn-info">cat 3</button>
-            </li>
-            <li class="nav-item">
-              <button type="button" class="btn btn-info">cat 4</button>
-            </li>
-          </ul>
-    </div>
 
     <div class="cards container text-center ">
       <div class="row row-cols-3">
