--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <div class="carousel-item active">
                 <img src="imgs/banner_money_heist.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Money Heist</h5>
+                  <h3>Example heading <span class="badge bg-light text-dark">NEW</span></h3>
                   <p>A VERY COOL SHOW ABOUT PEOPLE BRAKING IN TO A BANK</p>
                 </div>
               </div>
