--- a/index.html
+++ b/index.html
@@ -189,12 +189,13 @@
           <div class="carousel_cards">
 
             <div class="card text-white bg-dark mb-3" style="width: 18rem;">
-              <img src="imgs/movies/american_psycho.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
+              <!-- <img src="imgs/movies/american_psycho.jpg" class="card-img-top" alt="..."> -->
+              <!-- <div class="card-body"> -->
+                <img src="imgs/movies/american_psycho.jpg" class="card-img-top" alt="...">
+                <!-- <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+              <!-- </div> -->
             </div>
 
             <div class="card text-white bg-dark mb-3" style="width: 18rem;">
