--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
               </li>
               
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <form class="d-flex" action="Php/Searchbar.php" method="post">
+              <input class="form-control me-2" type="text" name="SearchRequest" placeholder="Search" aria-label="Search">
               <button class="btn btn-primary" type="submit">Search</button>
             </form>
           </div>
@@ -150,38 +150,6 @@
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <div id="carouselExampleControls" class="carousel slide">
       <div class="carousel-inner">
