--- a/index.html
+++ b/index.html
@@ -41,9 +41,14 @@
               <button class="btn btn-primary" type="submit">Search</button>
             </form>
           </div>
+          <div>
+            <img class="User" src="imgs/Netflix-avatar.png" alt="">
+          </div>
         </div>
       </nav>
-    
+
+
+
     <header>
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
