--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             
           </div>
         </div>
-        
+        <p>hoi</p>
         <!-- Additional carousel items -->
         <div class="carousel-item">
           <div class="carousel_cards">
